rewrite and finish most of the website

--- a/index.html
+++ b/index.html
@@ -92,32 +92,68 @@
           placeholder="Search"
         />
       </div>
-      <section id="NowPlaying" class="">
+      <section id="NowPlaying">
         <div class="container ps-5">
           <div class="movies">
-            <div class="row g-4">
-              <div class="col-md-4">
-                <div class="movie-card rounded-2 overflow-hidden">
-                  <div class="movie-poster">
-                    <img class="w-100" src="images/movie.jpg" alt="" />
-                  </div>
-                  <div class="movie-layer p-3">
-                    <h2 class="h3 pb-2">My Spy: The Eternal City</h2>
-                    <p class="movie-desc">
-                      JJ, a veteran CIA agent, reunites with his protégé Sophie,
-                      in order to prevent a catastrophic nuclear plot targeting
-                      the Vatican.
-                    </p>
-                    <p>Relese Date:</p>
-                    <ul class="movie-raing">
-                      <li>start</li>
-                    </ul>
-                    <div class="rating-number">7.5</div>
-                  </div>
-                </div>
+            <div class="row g-4"></div>
+          </div>
+        </div>
+      </section>
+
+      <section id="ContactUS" class="py-5">
+        <div class="container">
+          <h2 class="contact-us-title mb-4">Contact US</h2>
+          <form class="contact-us-form">
+            <div class="contact-form-group">
+              <div class="contact-form-control">
+                <input
+                  type="text"
+                  class="contact-input"
+                  placeholder="Enter Your Name"
+                />
+              </div>
+              <div class="contact-form-control">
+                <input
+                  type="email"
+                  class="contact-input"
+                  placeholder="Enter Your Email"
+                />
               </div>
             </div>
-          </div>
+            <div class="contact-form-group">
+              <div class="contact-form-control">
+                <input
+                  type="tel"
+                  class="contact-input"
+                  placeholder="Enter Your Phone"
+                />
+              </div>
+              <div class="contact-form-control">
+                <input
+                  type="number"
+                  class="contact-input"
+                  placeholder="Enter Your Age"
+                />
+              </div>
+            </div>
+            <div class="contact-form-group">
+              <div class="contact-form-control">
+                <input
+                  type="password"
+                  class="contact-input"
+                  placeholder="Enter Your Password"
+                />
+              </div>
+              <div class="contact-form-control">
+                <input
+                  type="password"
+                  class="contact-input"
+                  placeholder="ReEnter Password"
+                />
+              </div>
+            </div>
+            <button type="submit" class="contact-submit-btn">Submit</button>
+          </form>
         </div>
       </section>
     </main>
