rewrite and finish the whole project

--- a/index.html
+++ b/index.html
@@ -102,57 +102,67 @@
 
       <section id="ContactUS" class="py-5">
         <div class="container">
-          <h2 class="contact-us-title mb-4">Contact US</h2>
+          <h2 class="contact-us-title mb-4 text-start">Contact US</h2>
           <form class="contact-us-form">
-            <div class="contact-form-group">
-              <div class="contact-form-control">
+            <div class="row mb-3">
+              <div class="col-md-6 mb-3">
                 <input
                   type="text"
-                  class="contact-input"
+                  id="name"
+                  class="form-control contact-input"
                   placeholder="Enter Your Name"
                 />
               </div>
-              <div class="contact-form-control">
+              <div class="col-md-6 mb-3">
                 <input
                   type="email"
-                  class="contact-input"
+                  id="email"
+                  class="form-control contact-input"
                   placeholder="Enter Your Email"
                 />
               </div>
             </div>
-            <div class="contact-form-group">
-              <div class="contact-form-control">
+            <div class="row mb-3">
+              <div class="col-md-6 mb-3">
                 <input
                   type="tel"
-                  class="contact-input"
+                  id="phone"
+                  class="form-control contact-input"
                   placeholder="Enter Your Phone"
                 />
               </div>
-              <div class="contact-form-control">
+              <div class="col-md-6 mb-3">
                 <input
                   type="number"
-                  class="contact-input"
+                  id="age"
+                  class="form-control contact-input"
                   placeholder="Enter Your Age"
                 />
               </div>
             </div>
-            <div class="contact-form-group">
-              <div class="contact-form-control">
+            <div class="row mb-3">
+              <div class="col-md-6 mb-3">
                 <input
                   type="password"
-                  class="contact-input"
+                  id="password"
+                  class="form-control contact-input"
                   placeholder="Enter Your Password"
                 />
               </div>
-              <div class="contact-form-control">
+              <div class="col-md-6 mb-3">
                 <input
                   type="password"
-                  class="contact-input"
+                  id="repassword"
+                  class="form-control contact-input"
                   placeholder="ReEnter Password"
                 />
               </div>
             </div>
-            <button type="submit" class="contact-submit-btn">Submit</button>
+            <div class="text-start">
+              <button type="submit" class="btn btn-dark contact-submit-btn">
+                Submit
+              </button>
+            </div>
           </form>
         </div>
       </section>
